<resources>
    <string name="app_name">Tweets4News</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_enter">Continue To Application</string>
    <string name="name">Fullname</string>
    <string name="HURRIYET">HURRIYET</string>
    <string name="CnnTurk">CNNTURK</string>
    <string name="action_settings">Settings</string>
    <string name="Sabah">SABAH</string>
    <string name="DW">DW</string>
    <string name="AjHaber">AJHABER</string>
    <string name="Euronews">EUNEWS</string>
    <string name="AHBR">AHBR</string>
    <string name="AA">AA</string>
    <string name="GercekGundem">GG</string>
    <string name="Anayurt">ANAYURT</string>
    <string name="Aksam">AKSAM</string>
    <string name="Yenisafak">Y.SAFAK</string>
    <string name="Star">STAR</string>
    <string name="Cumhuriyet">CMHRT</string>
    <string name="Register">Register an Account</string>
    <string name="NewsSources">News Sources</string>
    <string name="SearchResults">Search Results</string>
    <string name="Login">Login</string>

</resources>
